# roundtable

./: .gitignore  README.md  harness.config.yaml  hello.txt  pyproject.toml
.claude/commands/: harness.md  roundtable.md
.github/workflows/: ci.yml  release.yml
.harness/docs/: ARCHITECTURE.md  IMPROVEMENT_PLAN.md  PRD.md
docs/: backends.md
src/harness/: __init__.py  agents.py  cli.py  config.py  dashboard.py  discovery.py  engine.py  errors.py  insights.py  llm.py  mcp.py  models.py  prompts.py  runctl.py  scan.py  store.py
src/roundtable/: __init__.py  agents.py  cli.py  config.py  dashboard.py  discovery.py  engine.py  errors.py  insights.py  llm.py  mcp.py  modelpick.py  models.py  prompts.py  runctl.py  scan.py  store.py
tests/: test_api.py  test_cli.py  test_cli_provider.py  test_dashboard.py  test_discovery.py  test_engine.py  test_hardening.py  test_ingest.py  test_insights.py  test_llm.py  test_map.py  test_modelpick.py  test_models.py  test_pi_provider.py  test_run_progress.py  test_scan.py  test_store.py
